FIX::20240209 가족장 미승인 상태 에러 추가
