# src/controllers/garden.controller.js
@@ -12,6 +12,8 @@ export const getflower = async (req, res) => {
     }
     console.log("우리 가족 꽃을 불러옵니다");
     const result = await flower(snsId);
+    if(result==-1)
+        return res.status(405).json({status: 403, isSuccess: false, error: "아직 가족이 없습니다! 가족장의 승인을 받아주세요"});
     return res.status(200).json({status: 200, isSuccess: true, flower: result});
 }
 
@@ -27,6 +29,8 @@ export const givelove = async (req, res) => {
     const result = await usePoint(snsId);
     if(result==-1)
         return res.status(402).json({status: 402, isSuccess: false, error: "포인트가 부족합니다"});
+    if(result==-2)
+        return res.status(405).json({status: 403, isSuccess: false, error: "아직 가족이 없습니다! 가족장의 승인을 받아주세요"});
     return res.status(200).json({status: 200, isSuccess: true, result: result});
 }
 
@@ -53,5 +57,7 @@ export const allflower = async (req, res) => {
     }
     console.log("정원 모든 꽃 정보를 불러옵니다");
     const result = await garden(snsId, req.params.flowerId);
+    if(result==-1)
+        return res.status(405).json({status: 403, isSuccess: false, error: "아직 가족이 없습니다! 가족장의 승인을 받아주세요"});
     return res.status(200).json({status: 200, isSuccess: true, garden: result});
 }
